--- a/package.json
+++ b/package.json
@@ -19,6 +19,16 @@
   },
   "homepage": "https://github.com/xris003/taskOne#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.11.2",
+    "express-validator": "^7.0.1",
+    "mongodb": "^3.6.0",
+    "mongoose": "^7.5.1",
+    "morgan": "^1.10.0",
+    "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
